Commit empezar layout eleccion cartas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">Jugeo_LoveLetter_Alba_Elena</string>
+     <string name="app_name">Jugeo_LoveLetter_Alba_Elena</string>
+
+    <string-array name="cartas">
+
+        <item>Princesa</item>
+
+        <item>Baron</item>
+
+        <item>Java</item>
+
+        <item>JavaScript</item>
+
+        <item>VisualBasic</item>
+
+    </string-array>
+
 </resources>
